@@ -3550,7 +3550,7 @@ INTELLIGENCE ADJ.", "MAX DEXTERITY ADJ.", "MAX CONSTITUTION ADJ.", "MAX
 CHARISMA ADJ.", "MAX WISDOM ADJ.", "SENSES", "DISPOSITION", "LEVEL",
 "ABILITY", "REJUV", "WEIGHT", "HEIGHT", "ARMOR", "DAMAGE", "ATTACK",
 "HITS", "MANA", "MOVE", "HUNGER", "THIRST", "FATIGUE", "BASEHITS",
-"BASEMANA", "BASEMOVE", "BASEHUNGER", "BASETHIRST", "BASEFATIGUE"</p>
+"BASEMANA", "BASEMOVE", "BASEHUNGER", "BASETHIRST", "BASEFATIGUE", "MAXEHITS",&nbsp;MAXMANA", "MAXMOVE", "MAXHUNGER", "MAXTHIRST", "MAXFATIGUE"</p>
 Additional variable names for mobs above the official ones include:
 "QUESTPOINTS", "FOLLOWERS", "TRAINS", "PRACTICES", "STINK",
 "CHARCLASS", "ALIGNMENT", "INCLINATION", "FACTIONID", "FACTIONAMT",
