@@ -15,6 +15,7 @@
  14. New misc ability: InstanceArea, for creating modified instances out of existing areas
  15. New achievement type: INSTANCEEXPIRE - for tying an achievement to having been in an instance
  16. ShopKeepers, et al can each of their own unique currency setting
+ 17. Scriptable MPGSET, STAT, etc.. now supports MAX char states (MAXHITS, etc)
 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
